--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
                 <a href="#rules">服务器规则</a>
                 <a href="#join">加入我们</a>
             </div>
+            <div class="menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </nav>
     </header>
 
@@ -105,5 +110,3 @@
 
     <script src="script.js"></script>
 </body>
-</html>
-</html>
